# analysis_utils

./: .gitignore  README.md  __init__.py  setup.cfg  setup.py
config/: config.yaml
docs/: analysis_utils.rst  analysis_utils.tests.rst  analysis_utils.utils.rst  conf.py  index.rst  modules.rst
tests/: test_utils_func.py  test_utils_func_pytest.py
utils/: __init__.py  utils_func.py
