[metadata]
# replace with your username:
name = analysis_utils
version = 0.0.0
author = shinsei66
author_email = XXS@XXXX.net
description = Python Data Analysis Utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shinsei66
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7